--- a/GeekShopping/FrontEnd/GeekShopping.Web/Views/Product/ProductUpdate.cshtml
+++ b/GeekShopping/FrontEnd/GeekShopping.Web/Views/Product/ProductUpdate.cshtml
@@ -14,7 +14,7 @@
             </div>
             <div class="col-10 pb-3">
                 <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="col-2">
                 <label asp-for="CategoryName" class="control-label pt-2" style="font-size:20px;"></label>
@@ -55,5 +55,5 @@
 </form>
 
 @section Scripts{
-    <partial name="_ValidationScriptsPartial">
+    <partial name="_ValidationScriptsPartial"/>
 }
