--- a/GeekShopping/FrontEnd/GeekShopping.Web/Views/Shared/_Layout.cshtml
+++ b/GeekShopping/FrontEnd/GeekShopping.Web/Views/Shared/_Layout.cshtml
@@ -23,10 +23,19 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                                Home
+                            </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductIndex">Product</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Product" asp-action="ProductIndex">
+                                Product
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cart" asp-action="CartIndex">
+                                <i class="fas fa-shopping-cart"></i>
+                            </a>
                         </li>
                     </ul>
                 </div>
