--- a/GeekShopping/FrontEnd/GeekShopping.Web/Views/Cart/Confirmation.cshtml
+++ b/GeekShopping/FrontEnd/GeekShopping.Web/Views/Cart/Confirmation.cshtml
@@ -5,5 +5,5 @@
     <p class="pb-3">
         We have received your order and your payment will be processed soon!
     </p>
-    <img src="/images/checkout.jpg" style="width: 80%"/>
+    <img src="/images/checkout.png" style="width: 80%"/>
 </div>
